ugradw stability